# my-mcp-lab

./: .gitignore  README  README.md
calculater_sse/: README.md  calculator_sse.py  pyproject.toml
github_oauth_sse/: github_oauth_app.py  github_oauth_sse.py  pyproject.toml
weather/: pyproject.toml
weather_sse/: README.md  pyproject.toml  weather_sse.py
